@@ -120,6 +120,7 @@ COM_MENUS_SUBMENU_MENUS="Menus"
 COM_MENUS_SUCCESS_REORDERED="Menu item successfully reordered"
 COM_MENUS_TITLE_EDIT_ITEM="Menu Manager: Title Edit Item"
 COM_MENUS_TOOLBAR_SET_HOME="Home"
+COM_MENUS_TIP_ALIAS_LABEL="<strong>Warning!</strong><br />Leave the alias field empty if the menu item alias and the menu item linked to by the alias have the same parent."
 COM_MENUS_TYPE_ALIAS="Menu Item Alias"
 COM_MENUS_TYPE_ALIAS_DESC="Create an alias to another menu item."
 COM_MENUS_TYPE_CHOOSE="Select a Menu Item Type:"
